@startuml
'https://plantuml.com/class-diagram
    class Book {
        - Long id
        - String titulo
        - String autor
        - String isbn
        - boolean disponivel
    }

    class User {
        - Long id
        - String nome
        - String email
    }

    class Loan {
        - Long id
        - Livro livro
        - Utilizador utilizador
        - LocalDate dataEmprestimo
        - LocalDate dataDevolucao
    }

    User "1" --> "0..3" Loan : possui
    Book "1" -- "0..*" Loan : participa
    Loan "0..*" --> "1" Book : refere-se a
    Loan "0..*" --> "1" User : pertence a

@enduml